force-app/main/default/objects/Activity/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <description>This field displays the date when the call was answered.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>