force-app/main/default/objects/Activity/fields/ipSCAPE_AgentName__c.field-meta.xml
<CustomField>
    <fullName>ipSCAPE_AgentName__c</fullName>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>