force-app/main/default/objects/Activity/fields/ipSCAPE_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ipSCAPE_Campaign__c</fullName>
    <description>This records the campaign description, entered in the ipSCAPE Workspace campaign details, in the Salesforce record.</description>
    <label>Campaign Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>