force-app/main/default/objects/Activity/fields/lp_conversation__LivePersonConversation__c.field-meta.xml
<CustomField>
    <fullName>lp_conversation__LivePersonConversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chat transcript record.</description>
    <label>LivePersonConversation</label>
    <referenceTo>lp_conversation__LivePersonConversation__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>