force-app/main/default/objects/Activity/fields/Outcome_Code__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Code__c</fullName>
    <label>Outcome Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Subjects__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Voicemail Left</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Sale Completed</fullName>
            </value>
            <value>
                <fullName>Callback Arranged</fullName>
            </value>
            <value>
                <fullName>Not Available - Call Back Later</fullName>
            </value>
            <value>
                <fullName>Not Interested (Closed Lost)</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Details</fullName>
            </value>
            <value>
                <fullName>Cancelled in COP</fullName>
            </value>
            <value>
                <fullName>NTU</fullName>
            </value>
            <value>
                <fullName>Paid Arrears</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Cancelled - MTC</fullName>
            </value>
            <value>
                <fullName>Cancelled - Non-Payment</fullName>
            </value>
            <value>
                <fullName>Paid Redemption/Cancellation Amount</fullName>
            </value>
            <value>
                <fullName>Sent to Shortfall (CBPF)</fullName>
            </value>
            <value>
                <fullName>Email Address Updated - Waiting for REP Date</fullName>
            </value>
            <value>
                <fullName>Email Address is Correct - Waiting for REP Date</fullName>
            </value>
            <value>
                <fullName>Midterm Cancellation</fullName>
            </value>
            <value>
                <fullName>No Response from Customer</fullName>
            </value>
            <value>
                <fullName>Loan Active</fullName>
            </value>
            <value>
                <fullName>Loan Rejected</fullName>
            </value>
            <value>
                <fullName>New Loan Active</fullName>
            </value>
            <value>
                <fullName>Paid on GC</fullName>
            </value>
            <value>
                <fullName>Paid on Stripe</fullName>
            </value>
            <value>
                <fullName>NTU  - CDC</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Voucher Sent</fullName>
            </value>
            <value>
                <fullName>Voucher Previously Issued/Re-issued</fullName>
            </value>
            <value>
                <fullName>No Voucher Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>