force-app/main/default/objects/Activity/fields/Overdue_Task__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Task__c</fullName>
    <formula>NOW() &gt; Due_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Task</label>
    <type>Checkbox</type>
</CustomField>