force-app/main/default/objects/Activity/fields/Task_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Task_Subjects__c</fullName>
    <label>Task Subjects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CST: NTU</fullName>
            </value>
            <value>
                <fullName>CST: Shortfall</fullName>
            </value>
            <value>
                <fullName>CST:MPR</fullName>
            </value>
            <value>
                <fullName>CST: CDC - Not Received</fullName>
            </value>
            <value>
                <fullName>CST: CDC - Cancelled</fullName>
            </value>
            <value>
                <fullName>CST: Voucher</fullName>
            </value>
            <value>
                <fullName>CST: Redemption</fullName>
            </value>
            <value>
                <fullName>CST: Receipt</fullName>
            </value>
            <value>
                <fullName>CST: TWIMC</fullName>
            </value>
            <value>
                <fullName>CST: Manual DD</fullName>
            </value>
            <value>
                <fullName>CST: Failed GC</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>IT Ticket</fullName>
            </value>
            <value>
                <fullName>CST: Check CBPF</fullName>
            </value>
            <value>
                <fullName>CST: Admin</fullName>
            </value>
            <value>
                <fullName>CST: Negative MTA Refund</fullName>
            </value>
            <value>
                <fullName>CST: Cancel Re-Set Up Check</fullName>
            </value>
            <value>
                <fullName>CST: Cash Allocation</fullName>
            </value>
            <value>
                <fullName>CST: Daily Transactions</fullName>
            </value>
            <value>
                <fullName>CST: Claim</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>NB: Attempt to Contact 1</fullName>
            </value>
            <value>
                <fullName>NB: Attempt to Contact 2</fullName>
            </value>
            <value>
                <fullName>NB: Attempt to Contact 3</fullName>
            </value>
            <value>
                <fullName>NB: Attempt to Contact 4</fullName>
            </value>
            <value>
                <fullName>NB: Follow Up</fullName>
            </value>
            <value>
                <fullName>NB: Arranged Callback</fullName>
            </value>
            <value>
                <fullName>NB: Arranged Callback 2</fullName>
            </value>
            <value>
                <fullName>NB: Further Attempt</fullName>
            </value>
            <value>
                <fullName>NB: Quote Referred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>