force-app/main/default/objects/Activity/fields/Task_Unique_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Task_Unique_ID_Legacy__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Task Unique ID (Legacy)</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>